--- a/ui/src/app/components/register/register.component.scss
+++ b/ui/src/app/components/register/register.component.scss
@@ -13,7 +13,7 @@
   border-radius: var(--radius-l);
   box-shadow: var(--shadow-xl);
   width: 100%;
-  max-width: var(--spacing-8xl);
+  max-width: var(--container-s);
 
   h1 {
     font-size: var(--font-size-4xl);
